[project]
name = "python_notes"
version = "0.0.1"
description = "my python learning notes"
license = { text = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["python", "notes"]
dynamic = [ "dependencies" ]

[project.urls]
homepage = "https://github.com/chaitu-ycr/python_notes"
repository = "https://github.com/chaitu-ycr/python_notes"
documentation = "https://chaitu-ycr.github.io/python_notes/"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
dash-daq = "*"
ipykernel = "*"
cantools = "*"
plotly = "*"
customtkinter = "*"
pandas = "*"
opencv-python = "*"
pillow = "*"
pyinstaller = "*"
pytest-html = "*"
pyyaml = "*"
ruamel-yaml = "*"
mkdocs-material = "*"
mkdocs-jupyter = "*"
mkdocs-include-markdown-plugin = "*"
mkdocstrings-python = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
